add convest to sls and show channel

--- a/lab_4_immage/capture.ipynb
+++ b/lab_4_immage/capture.ipynb
@@ -49,6 +49,18 @@
     "print(\"The height of the image is: \", height) \n",
     "print(\"The width of the image is: \", width) \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hsv_image = cv2.cvtColor(image, cv2.COLOR_BGR2HLS)\n",
+    "L_image = hsv_image[:,:,1]\n",
+    "cv2.imwrite('l_image.jpg', L_image)\n",
+    "cv2.imshow('l_image.jpg', L_image)\n"
+   ]
   }
  ],
  "metadata": {
@@ -67,7 +79,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
